# dataengx

./: README.md  pyproject.toml  setup.cfg  setup.py
cli/: main.py
dataengx/: __init__.py
notebooks/: demo.ipynb
tests/: test_converters.py
