[metadata]
name = dataengx
version = 0.1.0
description = Data engineering utilities for converting and querying data files
author = Samuel Mana-ay
author_email = manaaysamuel.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    pandas
    duckdb
python_requires = >=3.7
